--- a/ReviewWebsite2017/Views/Home/Index.cshtml
+++ b/ReviewWebsite2017/Views/Home/Index.cshtml
@@ -1,108 +1,157 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+    <title>Movie Review</title>
+    <!-- Loading third party fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
+    <link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Loading main css file -->
+    <link rel="stylesheet" href="style.css">
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+    <!--[if lt IE 9]>
+    <script src="js/ie-support/html5.js"></script>
+    <script src="js/ie-support/respond.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+
+    <div id="site-content">
+        
+        <main class="main-content">
+            <div class="container">
+                <div class="page">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <div class="slider">
+                                <ul class="slides">
+                                    <li><a href="#"><img src="dummy/slide-1.jpg" alt="Slide 1"></a></li>
+                                    <li><a href="#"><img src="dummy/slide-2.jpg" alt="Slide 2"></a></li>
+                                    <li><a href="#"><img src="dummy/slide-3.jpg" alt="Slide 3"></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="row">
+                                <div class="col-sm-6 col-md-12">
+                                    <div class="latest-movie">
+                                        <a href="#"><img src="dummy/thumb-1.jpg" alt="Movie 1"></a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-12">
+                                    <div class="latest-movie">
+                                        <a href="#"><img src="dummy/thumb-2.jpg" alt="Movie 2"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> <!-- .row -->
+                    <div class="row">
+                        <div class="col-sm-6 col-md-3">
+                            <div class="latest-movie">
+                                <a href="#"><img src="dummy/thumb-3.jpg" alt="Movie 3"></a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3">
+                            <div class="latest-movie">
+                                <a href="#"><img src="dummy/thumb-4.jpg" alt="Movie 4"></a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3">
+                            <div class="latest-movie">
+                                <a href="#"><img src="dummy/thumb-5.jpg" alt="Movie 5"></a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3">
+                            <div class="latest-movie">
+                                <a href="#"><img src="dummy/thumb-6.jpg" alt="Movie 6"></a>
+                            </div>
+                        </div>
+                    </div> <!-- .row -->
+
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h2 class="section-title">December premiere</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                            <ul class="movie-schedule">
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                            </ul> <!-- .movie-schedule -->
+                        </div>
+                        <div class="col-md-4">
+                            <h2 class="section-title">November premiere</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                            <ul class="movie-schedule">
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                            </ul> <!-- .movie-schedule -->
+                        </div>
+                        <div class="col-md-4">
+                            <h2 class="section-title">October premiere</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                            <ul class="movie-schedule">
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                                <li>
+                                    <div class="date">16/12</div>
+                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                                </li>
+                            </ul> <!-- .movie-schedule -->
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- .container -->
+        </main>
+        
     </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run & Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
-</div>
+    <!-- Default snippet for navigation -->
+
+
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/app.js"></script>
+
+</body>
+</html>
