--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div> <!-- .row -->
-                <div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
+                <div class="colophon">Copyright 2017 Placeholder</div>
             </div> <!-- .container -->
         </footer>
     </div>
