CHanged the photos, removed thebullshit underneath it

--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -21,11 +21,11 @@
 <body>
     <header class="site-header">
         <div class="container">
-            <a href="index.html" id="branding">
+            <a href="#" id="branding">
                 <img src="images/logo.png" alt="" class="logo">
                 <div class="logo-copy">
                     <h1 class="site-title">Test</h1>
-                    <small class="site-description">Tagline goes here</small>
+                    <small class="site-description">Real Reviews. No Bullshit.</small>
                 </div>
             </a> <!-- #branding -->
             <div class="main-navigation">
