--- a/ReviewWebsite2017/Views/Home/Index.cshtml
+++ b/ReviewWebsite2017/Views/Home/Index.cshtml
@@ -29,9 +29,9 @@
                         <div class="col-md-9">
                             <div class="slider">
                                 <ul class="slides">
-                                    <li><a href="#"><img src="dummy/slide-1.jpg" alt="Slide 1"></a></li>
-                                    <li><a href="#"><img src="dummy/slide-2.jpg" alt="Slide 2"></a></li>
-                                    <li><a href="#"><img src="dummy/slide-3.jpg" alt="Slide 3"></a></li>
+                                    <li><a href="#"><img src="~/images/slide-1.jpeg.png" alt="Slide 1" ></a></li>
+                                    <li><a href="#"><img src="~/images/slide-2.jpg.png" alt="Slide 2" ></a></li>
+                                    <li><a href="#"><img src="~/images/slide-3.jpg.png" alt="Slide 3" ></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -39,12 +39,12 @@
                             <div class="row">
                                 <div class="col-sm-6 col-md-12">
                                     <div class="latest-movie">
-                                        <a href="#"><img src="dummy/thumb-1.jpg" alt="Movie 1"></a>
+                                        <a href="#"><img src="~/images/EvilEmpire.jpg" alt="Album 1"></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-12">
                                     <div class="latest-movie">
-                                        <a href="#"><img src="dummy/thumb-2.jpg" alt="Movie 2"></a>
+                                        <a href="#"><img src="~/images/Wovenwar.jpg" alt="Album 2"></a>
                                     </div>
                                 </div>
                             </div>
@@ -53,94 +53,25 @@
                     <div class="row">
                         <div class="col-sm-6 col-md-3">
                             <div class="latest-movie">
-                                <a href="#"><img src="dummy/thumb-3.jpg" alt="Movie 3"></a>
+                                <a href="#"><img src="~/images/DivisionBell.jpg" alt="Album 3"></a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
                             <div class="latest-movie">
-                                <a href="#"><img src="dummy/thumb-4.jpg" alt="Movie 4"></a>
+                                <a href="#"><img src="~/images/ScreamBloodyGore.jpg" alt="Album 4"></a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
                             <div class="latest-movie">
-                                <a href="#"><img src="dummy/thumb-5.jpg" alt="Movie 5"></a>
+                                <a href="#"><img src="~/images/OnceMoreRoundTheSun.jpg" alt="Album 5"></a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
                             <div class="latest-movie">
-                                <a href="#"><img src="dummy/thumb-6.jpg" alt="Movie 6"></a>
+                                <a href="#"><img src="~/images/LowTeens.jpg" alt="Album 6"></a>
                             </div>
                         </div>
                     </div> <!-- .row -->
-
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h2 class="section-title">December premiere</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                            <ul class="movie-schedule">
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                            </ul> <!-- .movie-schedule -->
-                        </div>
-                        <div class="col-md-4">
-                            <h2 class="section-title">November premiere</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                            <ul class="movie-schedule">
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                            </ul> <!-- .movie-schedule -->
-                        </div>
-                        <div class="col-md-4">
-                            <h2 class="section-title">October premiere</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                            <ul class="movie-schedule">
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                                <li>
-                                    <div class="date">16/12</div>
-                                    <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
-                                </li>
-                            </ul> <!-- .movie-schedule -->
-                        </div>
-                    </div>
                 </div>
             </div> <!-- .container -->
         </main>
