--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="main-navigation">
                 <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
                 <ul class="menu">
-                    <li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
+                    <li class="menu-item current-menu-item"><a asp-action="Index" asp-controller="Home">Home</a></li>
                     <li class="menu-item"><a href="about.html">About</a></li>
                     <li class="menu-item"><a href="review.html">Music Reviews</a></li>
                     <li class="menu-item"><a href="joinus.html">Sign Up</a></li>
