Changed the CSS: - Changed Background - Changed Color of container and menu bar - Changed Color of Text in menu bar - Removed the underline when hovering over <a>

--- a/ReviewWebsite2017/wwwroot/sass/libs/_global.scss
+++ b/ReviewWebsite2017/wwwroot/sass/libs/_global.scss
@@ -6,7 +6,7 @@ $browser-context: 15; // Default
 
 body {
 	background-color: $bg-color;
-	background-image: url(dummy/background.jpg);
+	background-image: url(dummy/background@2x.jpg);
 	background-position: top center;
 	background-repeat: no-repeat;
 	color       : $body-color;
