--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                         <div class="widget">
                             <h3 class="widget-title">Recent Review</h3>
                             <ul class="no-bullet">
-                                <li><a href="#">Lorem ipsum dolor</a></li>
+                                <li><a href="#">This and that</a></li>
                                 <li><a href="#">Sit amet consecture</a></li>
                                 <li><a href="#">Dolorem respequem</a></li>
                                 <li><a href="#">Invenore veritae</a></li>
