--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -2,21 +2,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ReviewWebsite2017</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-    <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
-    @Html.Raw(JavaScriptSnippet.FullScript)
+    <title>Movie Review</title>
+    <!-- Loading third party fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
+    <link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Loading main css file -->
+    <link href="style.css" rel="stylesheet" type="text/css" />
+
+    <!--[if lt IE 9]>
+    <script src="js/ie-support/html5.js"></script>
+    <script src="js/ie-support/respond.js"></script>
+    <![endif]-->
 </head>
 <body>
     <header class="site-header">
@@ -32,11 +32,11 @@
                 <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
                 <ul class="menu">
                     <li class="menu-item current-menu-item"><a asp-action="Index" asp-controller="Home">Home</a></li>
-                    <li class="menu-item"><a href="about.html">About</a></li>
-                    <li class="menu-item"><a href="review.html">Music Reviews</a></li>
-                    <li class="menu-item"><a href="joinus.html">Sign Up</a></li>
-                    <li class="menu-item"><a href="joinus.html">Sign In</a></li>
-                    <li class="menu-item"><a href="contact.html">Contact</a></li>
+                    <li class="menu-item"><a asp-action="About" asp-controller="Home">About</a></li>
+                    <li class="menu-item"><a asp-action="Review" asp-controller="Home">Music Reviews</a></li>
+                    <li class="menu-item"><a asp-action="SignUp" asp-controller="Home">Sign Up</a></li>
+                    <li class="menu-item"><a asp-action="SignIn" asp-controller="Home">Sign In</a></li>
+                    <li class="menu-item"><a asp-action="Contact" asp-controller="Home">Contact</a></li>
                 </ul> <!-- .menu -->
                 <form action="#" class="search-form">
                     <input type="text" placeholder="Search...">
