Reverted most of what I did yesterday.... oups!

--- a/ReviewWebsite2017/wwwroot/style.css
+++ b/ReviewWebsite2017/wwwroot/style.css
@@ -2084,7 +2084,7 @@ ul.arrow {
         }
 
 .main-content .container {
-    background: #868282; /*NICK: CHANGED BACKGROUND COLOR*/
+    background: white;/*CHANGED THE BACKGROUND BACK TO WHITE*/
     border-radius: 5px;
     padding: 30px;
 }
