--- a/ReviewWebsite2017/Views/Home/Contact.cshtml
+++ b/ReviewWebsite2017/Views/Home/Contact.cshtml
@@ -1,11 +1,10 @@
 ﻿<body>
-
     <div id="site-content">
         <main class="main-content">
             <div class="container">
                 <div class="page">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a>
+                        <a asp-action="Home" asp-controller="Home">Home</a>
                         <span>Contact</span>
                     </div>
                     <div class="content">
@@ -14,106 +13,32 @@
                                 <h2>Contact</h2>
                                 <ul class="contact-detail">
                                     <li>
-                                        <img src="images/icon-contact-map.png" alt="#">
-                                        <address><span>Company name. INC</span> <br>550 Avenue Street, New york</address>
+                                        <img src="~/images/icon-contact-map.png" alt="#">
+                                        <address><span>Oulton College</span> <br>4 Flanders Ct, Moncton</address>
                                     </li>
                                     <li>
-                                        <img src="images/icon-contact-phone.png" alt="">
-                                        <a href="tel:1590912831">+1 590 912 831</a>
+                                        <img src="~/images/icon-contact-phone.png" alt="phone">
+                                        <a href="tel:15068589696">+1 506 858 9696</a>
                                     </li>
                                     <li>
-                                        <img src="images/icon-contact-message.png" alt="">
-                                        <a href="mailto:contact@companyname.com">contact@companyname.com</a>
+                                        <img src="~/images/icon-contact-message.png" alt="">
+                                        <a href="website@gmail.com">website@gmail.com</a>
                                     </li>
                                 </ul>
                                 <div class="contact-form">
-                                    <input type="text" class="name" placeholder="name...">
-                                    <input type="text" class="email" placeholder="email...">
-                                    <input type="text" class="website" placeholder="website...">
-                                    <textarea class="message" placeholder="message..."></textarea>
+                                    <input type="text" class="name" placeholder="Name...">
+                                    <input type="text" class="email" placeholder="Email...">
+                                    <input type="text" class="website" placeholder="Website...">
+                                    <textarea class="message" placeholder="Message..."></textarea>
                                     <input type="submit" value="Send Message ">
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-offset-1">
-                                <div class="map"></div>
+                                <img src="~/images/oultoncollege.jpg" alt="Oulton College"/>
                             </div>
                         </div>
                     </div>
                 </div>
             </div> <!-- .container -->
         </main>
-        <footer class="site-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-2">
-                        <div class="widget">
-                            <h3 class="widget-title">About Us</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia tempore vitae mollitia nesciunt saepe cupiditate</p>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="widget">
-                            <h3 class="widget-title">Recent Review</h3>
-                            <ul class="no-bullet">
-                                <li>Lorem ipsum dolor</li>
-                                <li>Sit amet consecture</li>
-                                <li>Dolorem respequem</li>
-                                <li>Invenore veritae</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="widget">
-                            <h3 class="widget-title">Help Center</h3>
-                            <ul class="no-bullet">
-                                <li>Lorem ipsum dolor</li>
-                                <li>Sit amet consecture</li>
-                                <li>Dolorem respequem</li>
-                                <li>Invenore veritae</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="widget">
-                            <h3 class="widget-title">Join Us</h3>
-                            <ul class="no-bullet">
-                                <li>Lorem ipsum dolor</li>
-                                <li>Sit amet consecture</li>
-                                <li>Dolorem respequem</li>
-                                <li>Invenore veritae</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="widget">
-                            <h3 class="widget-title">Social Media</h3>
-                            <ul class="no-bullet">
-                                <li>Facebook</li>
-                                <li>Twitter</li>
-                                <li>Google+</li>
-                                <li>Pinterest</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="widget">
-                            <h3 class="widget-title">Newsletter</h3>
-                            <form action="#" class="subscribe-form">
-                                <input type="text" placeholder="Email Address">
-                            </form>
-                        </div>
-                    </div>
-                </div> <!-- .row -->
-                <div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
-            </div> <!-- .container -->
-        </footer>
-    </div>
-    <!-- Default snippet for navigation -->
-
-
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/app.js"></script>
-
-</body>
+        
