--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
     <title>Movie Review</title>
     <!-- Loading third party fonts -->
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
-    <link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="~/fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Loading main css file -->
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="~/style.css" rel="stylesheet" type="text/css" />
 
     <!--[if lt IE 9]>
     <script src="js/ie-support/html5.js"></script>
@@ -22,7 +22,7 @@
     <header class="site-header">
         <div class="container">
             <a href="#" id="branding">
-                <img src="images/logo.png" alt="" class="logo">
+                <img src="~/images/logo.png" alt="" class="logo">
                 <div class="logo-copy">
                     <h1 class="site-title">Test</h1>
                     <small class="site-description">Real Reviews. No Bullshit.</small>
