--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -31,17 +31,17 @@
             <div class="main-navigation">
                 <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
                 <ul class="menu">
-                    <li class="menu-item current-menu-item"><a asp-action="Index" asp-controller="Home">Home</a></li>
+                    <li class="menu-item "><a asp-action="Index" asp-controller="Home">Home</a></li>
                     <li class="menu-item"><a asp-action="About" asp-controller="Home">About</a></li>
                     <li class="menu-item"><a asp-action="Review" asp-controller="Home">Music Reviews</a></li>
                     <li class="menu-item"><a asp-action="SignUp" asp-controller="Home">Sign Up</a></li>
                     <li class="menu-item"><a asp-action="SignIn" asp-controller="Home">Sign In</a></li>
                     <li class="menu-item"><a asp-action="Contact" asp-controller="Home">Contact</a></li>
                 </ul> <!-- .menu -->
-                <form action="#" class="search-form">
+                <!--<form action="#" class="search-form">
                     <input type="text" placeholder="Search...">
                     <button><i class="fa fa-search"></i></button>
-                </form>
+                </form>-->
             </div> <!-- .main-navigation -->
             <div class="mobile-navigation"></div>
         </div>
