--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <header class="site-header">
         <div class="container">
             <a href="#" id="branding">
-                <img src="~/images/logo.png" alt="" class="logo">
+                <img src="~/images/logonewsize.png" alt="" class="logo"  >
                 <div class="logo-copy">
                     <h1 class="site-title">Test</h1>
                     <small class="site-description">Real Reviews. No Bullshit.</small>
@@ -54,26 +54,9 @@
                 <div class="row">
                     <div class="col-md-2">
                         <div class="widget">
-                            <h3 class="widget-title">About Us</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia tempore vitae mollitia nesciunt saepe cupiditate</p>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="widget">
                             <h3 class="widget-title">Recent Review</h3>
                             <ul class="no-bullet">
                                 <li><a href="#">This and that</a></li>
-                                <li><a href="#">Sit amet consecture</a></li>
-                                <li><a href="#">Dolorem respequem</a></li>
-                                <li><a href="#">Invenore veritae</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="widget">
-                            <h3 class="widget-title">Help Center</h3>
-                            <ul class="no-bullet">
-                                <li><a href="#">Lorem ipsum dolor</a></li>
                                 <li><a href="#">Sit amet consecture</a></li>
                                 <li><a href="#">Dolorem respequem</a></li>
                                 <li><a href="#">Invenore veritae</a></li>
@@ -102,16 +85,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <div class="widget">
-                            <h3 class="widget-title">Newsletter</h3>
-                            <form action="#" class="subscribe-form">
-                                <input type="text" placeholder="Email Address">
-                            </form>
-                        </div>
-                    </div>
                 </div> <!-- .row -->
-                <div class="colophon">Copyright 2017 Placeholder</div>
+                <div class="colophon">Copyright &copy; 2017 Placeholder</div>
             </div> <!-- .container -->
         </footer>
     </div>
