Changed the main icon of the webpage

--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <header class="site-header">
         <div class="container">
             <a href="#" id="branding">
-                <img src="~/images/logonewsize.png" alt="" class="logo"  >
+                <img src="~/images/Music-icon.png" alt="" class="logo" width="42" height="42" >
                 <div class="logo-copy">
                     <h1 class="site-title">Test</h1>
                     <small class="site-description">Real Reviews. No Bullshit.</small>
