Added two pages: the review page and the single page for the detailed review. Modified a whole bunch of stuff too that I can't remember specifically. Oh well.

--- a/ReviewWebsite2017/Views/Home/Contact.cshtml
+++ b/ReviewWebsite2017/Views/Home/Contact.cshtml
@@ -1,10 +1,8 @@
-﻿<body>
-    <div id="site-content">
-        <main class="main-content">
+﻿<main class="main-content">
             <div class="container">
                 <div class="page">
                     <div class="breadcrumbs">
-                        <a asp-action="Home" asp-controller="Home">Home</a>
+                        <a asp-action="Index" asp-controller="Home">Home</a>
                         <span>Contact</span>
                     </div>
                     <div class="content">
