--- a/ReviewWebsite2017/Views/Home/Index.cshtml
+++ b/ReviewWebsite2017/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿<body>
-    <div id="site-content">
+﻿    <div id="site-content">
         <main class="main-content">
             <div class="container">
                 <div class="page">
@@ -7,9 +6,9 @@
                         <div class="col-md-9">
                             <div class="slider">
                                 <ul class="slides">
-                                    <li><a href="#"><img src="~/images/slide-1.jpeg.png" alt="Slide 1" ></a></li>
-                                    <li><a href="#"><img src="~/images/slide-2.jpg.png" alt="Slide 2" ></a></li>
-                                    <li><a href="#"><img src="~/images/slide-3.jpg.png" alt="Slide 3" ></a></li>
+                                    <li><a asp-action="Single" asp-controller="Home"><img src="~/images/slide-1.jpeg.png" alt="Slide 1"></a></li>
+                                    <li><a asp-action="Single" asp-controller="Home"><img src="~/images/slide-2.jpg.png" alt="Slide 2"></a></li>
+                                    <li><a asp-action="Single" asp-controller="Home"><img src="~/images/slide-3.jpg.png" alt="Slide 3"></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -17,12 +16,12 @@
                             <div class="row">
                                 <div class="col-sm-6 col-md-12">
                                     <div class="latest-movie">
-                                        <a href="#"><img src="~/images/EvilEmpire.jpg" alt="Album 1"></a>
+                                        <a asp-action="Single" asp-controller="Home"><img src="~/images/EvilEmpire.jpg" alt="Album 1"></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-12">
                                     <div class="latest-movie">
-                                        <a href="#"><img src="~/images/Wovenwar.jpg" alt="Album 2"></a>
+                                        <a asp-action="Single" asp-controller="Home"><img src="~/images/Wovenwar.jpg" alt="Album 2"></a>
                                     </div>
                                 </div>
                             </div>
@@ -31,22 +30,22 @@
                     <div class="row">
                         <div class="col-sm-6 col-md-3">
                             <div class="latest-movie">
-                                <a href="#"><img src="~/images/DivisionBell.jpg" alt="Album 3"></a>
+                                <a asp-action="Single" asp-controller="Home"><img src="~/images/DivisionBell.jpg" alt="Album 3"></a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
                             <div class="latest-movie">
-                                <a href="#"><img src="~/images/ScreamBloodyGore.jpg" alt="Album 4"></a>
+                                <a asp-action="Single" asp-controller="Home"><img src="~/images/ScreamBloodyGore.jpg" alt="Album 4"></a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
                             <div class="latest-movie">
-                                <a href="#"><img src="~/images/OnceMoreRoundTheSun.jpg" alt="Album 5"></a>
+                                <a asp-action="Single" asp-controller="Home"><img src="~/images/OnceMoreRoundTheSun.jpg" alt="Album 5"></a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
                             <div class="latest-movie">
-                                <a href="#"><img src="~/images/LowTeens.jpg" alt="Album 6"></a>
+                                <a asp-action="Single" asp-controller="Home"><img src="~/images/LowTeens.jpg" alt="Album 6"></a>
                             </div>
                         </div>
                     </div> <!-- .row -->
@@ -61,5 +60,3 @@
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/app.js"></script>
-
-</body>
