--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div> <!-- .row -->
-                <div class="colophon">Copyright &copy; 2017 Placeholder</div>
+                <div class="colophon">Copyright &copy; @DateTime.Now.Year  -  Placeholder</div>
             </div> <!-- .container -->
         </footer>
     </div>
