Modified the paginated list (now it actually works), added a third page with a single album inside and modified some of the content of the website itself

--- a/ReviewWebsite2017/Views/Home/Review.cshtml
+++ b/ReviewWebsite2017/Views/Home/Review.cshtml
@@ -4,16 +4,28 @@
             <div class="breadcrumbs">
                 <a asp-action="Index" asp-controller="Home">Home</a>
                 <span>Music Review</span>
+
             </div>
-            <div class="filters">
+            <div class="pagination-top">
+                <!--<a asp-action="Review" asp-controller="Home" class="page-number prev"><i class="fa fa-angle-left"></i></a>-->
+                <span class="page-number current">1</span>
+                <a asp-action="ReviewTwo" asp-controller="Home" class="page-number">2</a>
+                <a asp-action="ReviewThree" asp-controller="Home" class="page-number">3</a>
+                @*<a href="#" class="page-number">4</a>
+            <a href="#" class="page-number">5</a>*@
+                <a asp-action="ReviewTwo" asp-controller="Home" class="page-number next"><i class="fa fa-angle-right"></i></a>
+            </div>
+
+            @*<div class="filters">
                 <select name="#" id="#" placeholder="Choose Category">
                     <option value="#">Rock &amp; Pop</option>
                     <option value="#">Metal</option>
                     <option value="#">Punk</option>
                     <option value="#">Hip Hop</option>
                     <option value="#">Alternative</option>
-                </select>
+                </select>*@
             </div>
+
             <div class="movie-list">
                 <div class="movie">
                     <figure class="movie-poster"><img src="~/images/ChildrenOfFire.jpeg" alt="#"></figure>
@@ -57,14 +69,13 @@
                 </div>
             </div> <!-- .movie-list -->
             <div class="pagination">
-                <a href="#" class="page-number prev"><i class="fa fa-angle-left"></i></a>
+                <!--<a asp-action="Review" asp-controller="Home" class="page-number prev"><i class="fa fa-angle-left"></i></a>-->
                 <span class="page-number current">1</span>
-                <a href="#" class="page-number">2</a>
-                <a href="#" class="page-number">3</a>
-                <a href="#" class="page-number">4</a>
-                <a href="#" class="page-number">5</a>
-                <a href="#" class="page-number next"><i class="fa fa-angle-right"></i></a>
+                <a asp-action="ReviewTwo" asp-controller="Home" class="page-number">2</a>
+                <a asp-action="ReviewThree" asp-controller="Home" class="page-number">3</a>
+                @*<a href="#" class="page-number">4</a>
+                <a href="#" class="page-number">5</a>*@
+                <a  asp-action="ReviewTwo" asp-controller="Home" class="page-number next"><i class="fa fa-angle-right"></i></a>
             </div>
-        </div>
     </div> <!-- .container -->
 </main>
