--- a/ReviewWebsite2017/Views/Shared/_Layout.cshtml
+++ b/ReviewWebsite2017/Views/Shared/_Layout.cshtml
@@ -56,10 +56,10 @@
                         <div class="widget">
                             <h3 class="widget-title">Recent Review</h3>
                             <ul class="no-bullet">
-                                <li><a href="#">This and that</a></li>
-                                <li><a href="#">Sit amet consecture</a></li>
-                                <li><a href="#">Dolorem respequem</a></li>
-                                <li><a href="#">Invenore veritae</a></li>
+                                <li><a asp-action="Single" asp-controller="Home">A Trick of the Tail</a></li>
+                                <li><a asp-action="Single" asp-controller="Home">Hardwired... To Self-Destruct</a></li>
+                                <li><a asp-action="Single" asp-controller="Home">Children of Fire</a></li>
+                                <li><a asp-action="Single" asp-controller="Home">Once More 'Round the Sun</a></li>
                             </ul>
                         </div>
                     </div>
@@ -67,10 +67,8 @@
                         <div class="widget">
                             <h3 class="widget-title">Join Us</h3>
                             <ul class="no-bullet">
-                                <li><a href="#">Lorem ipsum dolor</a></li>
-                                <li><a href="#">Sit amet consecture</a></li>
-                                <li><a href="#">Dolorem respequem</a></li>
-                                <li><a href="#">Invenore veritae</a></li>
+                                <li><a href="#">Sign In</a></li>
+                                <li><a href="#">Sign Up</a></li>
                             </ul>
                         </div>
                     </div>
