Made modification for the tabs and added some content, mostly fine polishing and more implementation and uses of the c# language rahther than hard-coded html

--- a/ReviewWebsite2017/Views/Home/Contact.cshtml
+++ b/ReviewWebsite2017/Views/Home/Contact.cshtml
@@ -1,4 +1,8 @@
-﻿<main class="main-content">
+﻿@{
+    ViewData["Title"] = "Contact Us - MUSIC REVIEWS";
+}  
+
+<main class="main-content">
             <div class="container">
                 <div class="page">
                     <div class="breadcrumbs">
