--- a/ReviewWebsite2017/Views/Home/Index.cshtml
+++ b/ReviewWebsite2017/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿    <div id="site-content">
+﻿@{
+    ViewData["Title"] = "Home - MUSIC REVIEWS";
+}    
+
+<div id="site-content">
         <main class="main-content">
             <div class="container">
                 <div class="page">
