--- a/ReviewWebsite2017/Views/Home/ReviewThree.cshtml
+++ b/ReviewWebsite2017/Views/Home/ReviewThree.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Reviews - MUSIC REVIEWS";
+}  
+
 <main class="main-content">
     <div class="container">
         <div class="page">
@@ -29,12 +33,12 @@
                     <div class="movie-title"><a asp-action="Single" asp-controller="Home">Dream Theater <br /><b>Falling Into Infinity</b></a></div>
                     <p><em>7/10 - <b>Good</b></em></p>
                 </div>
-                @*<div class="movie">
-                    <figure class="movie-poster"><img src="~/images/HardWiredCover.jpeg" alt="#"></figure>
-                    <div class="movie-title"><a asp-action="Single" asp-controller="Home">Metallica <br /><b>Hardwired... To Self-Destruct</b></a></div>
-                    <p><em>8/10 - <b>Great</b></em></p>
-                </div>
                 <div class="movie">
+                    <figure class="movie-poster"><img src="~/images/FromGenesisRoRevelation.jpg" alt="#"></figure>
+                    <div class="movie-title"><a asp-action="Single" asp-controller="Home">Genesis <br /><b>From Genesis to Revelation</b></a></div>
+                    <p><em>5/10 - <b>Mediocre</b></em></p>
+                </div>
+                @*<div class="movie">
                     <figure class="movie-poster"><img src="~/images/FromMarsToSirus.jpg" alt="#"></figure>
                     <div class="movie-title"><a asp-action="Single" asp-controller="Home">Gojira <br /> <b>From Mars to Sirus</b></a></div>
                     <p>Sed ut perspiciatis unde omnis iste natus error voluptatem doloremque.</p>
