--- a/ReviewWebsite2017/Views/Home/ReviewTwo.cshtml
+++ b/ReviewWebsite2017/Views/Home/ReviewTwo.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Reviews - MUSIC REVIEWS";
+}  
+
 <main class="main-content">
     <div class="container">
         <div class="page">
