--- a/ReviewWebsite2017/Views/Home/About.cshtml
+++ b/ReviewWebsite2017/Views/Home/About.cshtml
@@ -1,4 +1,8 @@
-﻿<main class="main-content">
+﻿@{
+    ViewData["Title"] = "About - MUSIC REVIEWS";
+}  
+
+<main class="main-content">
     <div class="container">
         <div class="page">
             <div class="breadcrumbs">
