--- a/ReviewWebsite2017/Views/Home/Review.cshtml
+++ b/ReviewWebsite2017/Views/Home/Review.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewData["Title"] = "Reviews - MUSIC REVIEWS";
+}  
 <main class="main-content">
     <div class="container">
         <div class="page">
